# bench_rev_comp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  requirement.txt  run.py
cpp/: .gitignore  CMakeLists.txt  algorithm.md  bench_test
cpp/inc/: acomp.hpp  arev.hpp  arev_comp.hpp  comp_hash.hpp  comp_naif.hpp  comp_pol3.hpp  comp_tab.hpp  rev_allocate.hpp  rev_comp_hash_allocate.hpp  rev_comp_hash_switch.hpp  rev_comp_naive_allocate.hpp  rev_comp_naive_switch.hpp  rev_comp_pol3_allocate.hpp  rev_comp_pol3_switch.hpp  rev_comp_regex.hpp  rev_comp_tab.hpp  rev_comp_tab_allocate.hpp  rev_comp_tab_switch.hpp  rev_naif.hpp  rev_std.hpp  rev_switch.hpp
cpp/src/: acomp.cpp  arev.cpp  comp_hash.cpp  comp_naif.cpp  comp_pol3.cpp  comp_tab.cpp  main.cpp  rev_allocate.cpp  rev_comp_hash.cpp  rev_comp_hash_allocate.cpp  rev_comp_hash_switch.cpp  rev_comp_naive_allocate.cpp  rev_comp_naive_switch.cpp  rev_comp_pol3.cpp  rev_comp_pol3_allocate.cpp  rev_comp_pol3_switch.cpp  rev_comp_regex.cpp  rev_comp_tab.cpp  rev_comp_tab_allocate.cpp  rev_comp_tab_switch.cpp  rev_naif.cpp  rev_std.cpp  rev_switch.cpp
cpp/test/: test_rev_comp.cpp
data/: generate_data.py
inc/: rev_comp_hash.hpp  rev_comp_naive.hpp  rev_comp_pol3.hpp  rev_comp_tab.hpp
mphf/: CMakeLists.txt
mphf/script/: generate_gperf_file.py
mphf/src/: main.cpp
python/: algorithm.md  arev_comp.py  bench  rev_comp_hash.py  rev_comp_naive.py  rev_comp_pol3.py  rev_comp_tab.py
python/test/: test_rev_comp.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/comp/: mod.rs
rust/src/rev/: mod.rs
src/: main.cpp  rev_comp_naive.cpp  rev_comp_pol3.cpp  rev_comp_tab.cpp
